<resources>
    <string name="app_name">Libras</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="message_select_image">Take a picture from camera or select from gallery.</string>

    <string name="hint_search">Type a word to search</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="label_word">Word</string>
    <string name="label_description">Description</string>
    <string name="label_libras_sample">Libras sample</string>
    <string name="label_sample">Sample</string>


    <string name="label_about">About</string>
    <string name="label_share">Share</string>
    <string name="empty_string"></string>
    <string name="label_dictionary">Word search</string>
    <string name="label_capture">Image recognize</string>
    <string name="label_history">Search history</string>
    <string name="label_settings">Tools</string>
    <string name="label_select_picture">Select picture</string>
    <string name="share_message">Hey, check out this nice application at https://github.com/osnircunha/x2libras</string>
    <string name="about_message">Please go to https://github.com/osnircunha/x2libras to get more information about this application.</string>
    <string name="label_no_internet">No network connection active.</string>
    <string name="label_not_found">Not found</string>
    <string name="label_error_on_search">Error on search</string>
</resources>
